Fix a scrollbar bug on dialogs

--- a/app/assets/stylesheets/islay/admin/dialogs.css.sass
+++ b/app/assets/stylesheets/islay/admin/dialogs.css.sass
@@ -140,7 +140,8 @@
     width: 100%
     height: 100%
     float: left
-    overflow: scroll
+    overflow-y: auto
+    overflow-x: hidden
 
   .controls
     +border-bottom-radius(0.3em)
